// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить текст в <span class="Button__text"/>, а компонент в <span class="Button__content"/> 1`] = `
<button
  className="Button Button_color_unset Button_size_l Button_type_button Button_width_default"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="Button__content"
  >
    <span
      className="Button__text"
      key="wrappedText"
    >
      foo
    </span>
    <div
      key="wrappedChild1"
    >
      tag
    </div>
  </span>
</button>
`;

exports[`должен отрендерить текст кнопки в <span class="Button__text"/> 1`] = `
<button
  className="Button Button_color_unset Button_size_l Button_type_button Button_width_default"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="Button__content"
  >
    <span
      className="Button__text"
      key="wrappedText"
    >
      foo
    </span>
  </span>
</button>
`;

exports[`компонент внутри кнопки должен отрендерить внутри <span class="Button__content"/> без <span class="Button__text"/> должен правильно отрендерить stateless компонент 1`] = `
<button
  className="Button Button_color_unset Button_size_l Button_type_button Button_width_default"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="Button__content"
  >
    <Foo
      key="wrappedChild0"
    />
  </span>
</button>
`;

exports[`компонент внутри кнопки должен отрендерить внутри <span class="Button__content"/> без <span class="Button__text"/> должен правильно отрендерить компонент 1`] = `
<button
  className="Button Button_color_unset Button_size_l Button_type_button Button_width_default"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="Button__content"
  >
    <Foo
      key="wrappedChild0"
    />
  </span>
</button>
`;

exports[`компонент внутри кнопки должен отрендерить внутри <span class="Button__content"/> без <span class="Button__text"/> должен правильно отрендерить тег 1`] = `
<button
  className="Button Button_color_unset Button_size_l Button_type_button Button_width_default"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="Button__content"
  >
    <div
      key="wrappedChild0"
    >
      tag
    </div>
  </span>
</button>
`;
